welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:1: error: Int does not take parameters
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {if (equalOk) {return ((a<(b-1))&&(b<c(-1)))}
                                                                                                       ^